2011-04-07 Riccardo Mottola <rm@gnu.org>

	* Headers/ProjectCenter/PCDefines.h
	Change ifdef to detect non-gnustep.

	* Framework/PCProjectInspector.m
	Warning fix.

2011-04-06  Fred Kiefer <FredKiefer@gmx.de>

	* Modules/Parsers/ProjectCenter/PCParser.m [-parse]: Move the
	selector and IMP definitions inside the method. Global IMP caching
	is always wrong! And this broke compilation with llvm.

2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Modules/Projects/ResourceSet/PCResourceSetProject.m
	([PCResourceSetProject -appendHead:]): Added FIXME.

2011-01-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditor.m (-revertFileToSaved):
	Ask for confirmation before reverting.

2011-01-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Editors/ProjectCenter/PCEditorView.m (-performIndentation):
	Fix annoying bug where pressing the tab key would delete whole
	empty lines. Also register insertions done by the tab key at the
	undo manager.

2011-01-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Projects/Application/PCAppProject+Inspector.m
	(-setDocBasedApp:):
	Fix bug where the document based app flag was reset after opening
	the project inspector for the first time.

2010-12-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectBuilder.m (-buildArguments): Add either
	debug=yes or debug=no to the arguments since the debug variable no
	longer has a clear default for quite some time.

2010-12-22 German Arias <german@xelalug.org>
	
	* Headers/ProjectCenter/PCProject.h:
	Added method -resourceDirForLanguage:. So we can call this
	method to manage the languages.
	* Headers/ProjectCenter/PCProjectInspector.h:
	* Framework/PCProjectInspector.m:
	* Framework/English.lproj/ProjectLanguages.gorm:
	Added UI controls for languages at Inspector, and methods
	-addLanguage: and -removeLanguage:.

2010-12-18 German Arias <german@xelalug.org>
	
	* Headers/ProjectCenter/PCProjectInspector.h: